@@ -1,6 +1,6 @@
 package swop.CarManufactoring;
 import swop.Car.Car;
-import swop.Exceptions.NotAllTasksCompleteException;
+import swop.Car.CarModel.*;
 import swop.Miscellaneous.TimeStamp;
 
 import java.util.*;
@@ -9,7 +9,7 @@ import java.util.*;
  * Iterator for the scheduling algorithm to pick the right car for a specified algorithm
  * @param <T> the type of the iterable
  */
-interface customIterator<T> {
+interface QueueIterator<T> {
 	/**
 	 * iterator standard hasnext method
 	 * @return whether the iterator has another element to return
@@ -25,72 +25,145 @@ interface customIterator<T> {
 }
 
 /**
- * A scheduler manages the time and order of the carqueue
+ * A scheduler manages the time and order of the car queue
  */
 public class Scheduler {
 
+	/**
+	 * The CarManufacturingController that this Scheduler provides the scheduling for
+	 */
     private final CarManufacturingController controller;
+	/**
+	 * The amount of minutes that have past this day
+	 */
     private int minutes;
+	/**
+	 * The current day the program is at
+	 */
     private int day;
+	/**
+	 * The amount of minutes that CarMechanics will maximally work this day.
+	 */
     private int workingDayMinutes;
-    private final Map<String, Integer> timePerWorkstationMap = new HashMap<>(){{
-		put( "ModelA",50);
-		put( "ModelB",70);
-		put( "ModelC",60);
+	/**
+	 * The amount of overtime that occurred so fat this day
+	 */
+    private int overTime;
+	/**
+	 * Maps the amount of time it takes to complete all tasks at a workstation for every type of CarModel
+	 */
+    private final Map<Class<? extends CarModel>, Integer> timePerWorkstationMap = new HashMap<>(){{
+		put(ModelA.class, 50);
+		put(ModelB.class, 70);
+		put(ModelC.class, 60);
 	}};
-	private final List<String> validAlgorithms = List.of("BATCH", "FIFO", "Cancel selection");
+	/**
+	 * A list of valid scheduling algorithms
+	 */
+	private final List<String> validAlgorithms = List.of("BATCH", "FIFO");
+	/**
+	 * The currently active scheduling algorithm
+	 */
 	private String algorithm;
+	/**
+	 * The batchOptions that are currently used if the scheduling algorithm is "BATCH"
+	 */
 	private Map<String,String> batchOptions;
 
 	/**
-	 * initializes the scheduler with his controller, the current time at the beginning, the total minutes in a workingday and the algorithm.
-	 * @param carManufacturingController a given controller that initialized this scheduler
+	 * Initialises the scheduler with his controller, the current time at the beginning, 
+	 * the total minutes in a working day and the algorithm.
+	 * @param carManufacturingController a given controller that initialised this scheduler
 	 */
     public Scheduler(CarManufacturingController carManufacturingController) {
+		if (carManufacturingController == null)
+			throw new IllegalArgumentException("provided controller is null, provide a controller to make a scheduler");
         this.controller = carManufacturingController;
         this.minutes = 0;
         this.workingDayMinutes = 960; // 06:00 -> 22:00
         this.setSchedulingAlgorithm("FIFO", null);
     }
 
-    /**
-     * Calculates the estimated completion time based on the CarQueue and overtime done on previous days
-     * @param car a car for which to calculate the estimated completion time
-     * @return Time formatted as string
-     */
-    public TimeStamp getEstimatedCompletionTime(Car car) {
-    	  int day = this.day;
-          int minutes = this.minutes;
-          int workingDayMinutes = this.workingDayMinutes;
-          List<Car> workstationCars = this.getWorkStationCars();
-     
-    
-          minutes += this.calculateWaitingTime(car,  workstationCars);
-
-          // assume no overtime should be made: assignment -> scheduler should minimize overtime
-          // scheduling a car to make overtime to complete should not be allowed
-          while (minutes > workingDayMinutes & !this.carOnAssembly(car)) {
-              day += 1;
-              minutes -= workingDayMinutes;
-              workingDayMinutes = 960;
-          }
-
-          if (day != this.day) {
-              if (minutes < 3 * this.timePerWorkstationMap.get(car.getCarModelName())) { // First car of the new day
-				  minutes = 3 * this.timePerWorkstationMap.get(car.getCarModelName());
-			  }
-              else {minutes = (int) (Math.ceil( (float) minutes/60) * 60);} // Other cars
-
-          }
-
-		  return new TimeStamp(day,minutes);
+	/**
+	 * Get the working day minutes -> the total number of minutes the factory can work on a car this day
+	 * @return int of the minutes in this day
+	 */
+	public int getWorkingDayMinutes() {
+    	return this.workingDayMinutes;
     }
 
+    /**
+     * returns the estimated completion time based on the CarQueue and overtime done on previous days
+     * @param car a car for which to calculate the estimated completion time
+     * @return a TimeStamp containing the estimated day and minutes the car will be finished. 
+     */
+    public TimeStamp getEstimatedCompletionTime(Car car) {
+		if (car == null)
+			throw new IllegalArgumentException("null car object has no estimated completion time");
+		int totalMinutes = this.getEstCompletionTimeInMinutes(car);
+        return this.createTimeStampForCar(totalMinutes, car);
+    }
+    
+    /**
+     * calculates the estimated time it will take to finish the car in minutes
+     * @param car from which the estimated time needs to be calculated
+     * @return estimated time in minutes
+     */
+	private int getEstCompletionTimeInMinutes(Car car) {
+		if (car == null)
+			throw new IllegalArgumentException("null car obeject has no estimated completion time in minutes");
+    	List<Car> workstationCars = this.getWorkStationCars();
+    	int minutes = this.minutes;
+    	minutes += this.calculateWaitingTime(car,  workstationCars);
+    	return minutes;
+    }
 	/**
+	 * Creates a TimeStamp based on current car 
+	 * and the the estimated time in minutes given as parameter
+	 * @param minutes the the estimated time in minutes
+	 * @param car the current car
+	 * @return a new TimeStamp
+	 */
+	private TimeStamp createTimeStampForCar(int minutes, Car car) {
+		if (minutes < 0)
+			throw new IllegalArgumentException("minutes cant be negative");
+		if (car == null)
+			throw new IllegalArgumentException("car cannot be null");
+		if(this.carOnAssembly(car)) return new TimeStamp(this.day, minutes); //needs to be finished today
+		int day = this.day;
+		int workingDayMinutes = this.workingDayMinutes;
+		while (minutes > workingDayMinutes) {
+	        day += 1;
+	        minutes -= workingDayMinutes;
+	        workingDayMinutes = 960;
+	    }
+		if(day != this.day) 
+			return new TimeStamp(day,roundMinutes(minutes, this.timePerWorkstationMap.get(car.getCarModel().getClass())));
+		return new TimeStamp(day, minutes);
+	}
+    
+    /**
+     * This function will round the given minutes based on avgTimeCarInStation 
+     * @param minutes the passed minutes that need to be rounded
+     * @param avgTimeCarInStation how long it typical takes to finish a car of this model
+     * @return rounded minutes based on the model
+     */
+    private int roundMinutes(int minutes, int avgTimeCarInStation) {
+		if (minutes < 0 || avgTimeCarInStation < 0)
+			throw new IllegalArgumentException("minutes cant be negative");
+	   	if (minutes < 3 * avgTimeCarInStation) // First car of the new day
+	   		return 3 * avgTimeCarInStation;
+	   	return (int) (Math.ceil( (float) minutes/60) * 60);// Other cars
+	}
+
+	/**
+	 * Checks if the parameter car is on the assembly line
 	 * @param car the car to check if it is on the assemblyLine
 	 * @return True if the given car is on the assemblyLine.
 	 */
 	private boolean carOnAssembly(Car car) {
+		if (car == null)
+			throw new IllegalArgumentException("Provided car is null");
 		List<Car> workstationCars = this.getWorkStationCars();
 		return workstationCars.contains(car);
 	}
@@ -98,26 +171,30 @@ public class Scheduler {
 	/**
      * Returns how long it will take for the car to be finished
 	 * @param car a car for which to return the estimated waiting time
-	 * @param workstationCars the cars currently on the assembly line
-     * @return time
+	 * @param workstationCars list of cars currently on the assembly line 
+	 * (this list may have elements like car = null)
+     * @return time the car has to wait before it is completed
      */
     private int calculateWaitingTime(Car car,List<Car> workstationCars) {
+		if (car == null)
+			throw new IllegalArgumentException("car is null");
+		if (workstationCars == null || workstationCars.size() != 3) // null objects count as car
+			throw new IllegalArgumentException("not enough cars on station");
 		Car station1Car = workstationCars.get(0);
     	Car station2Car = workstationCars.get(1);
     	Car station3Car = workstationCars.get(2);
 
-    	customIterator<Car> iter = this.iterator(this.controller.getCarQueue());
-		Car current = iter.next(this.algorithm);
+    	QueueIterator<Car> carqueue = this.createIterator(this.controller.getCarQueue());
+		Car current = carqueue.next(this.algorithm);
 
 		int time = this.getMax(getUnfinishedCars());
     	while(station3Car == null || !station3Car.equals(car)) {
 			station3Car = station2Car;
 			station2Car = station1Car;
 			station1Car = current;
-    		current = iter.next(this.algorithm);
+    		current = carqueue.next(this.algorithm);
     		time += this.getMax(Arrays.asList(station1Car, station2Car, station3Car));
     	}
-
     	return time;
     }
 
@@ -135,10 +212,11 @@ public class Scheduler {
      * @return the maximum time for the list of cars
      */
     private int getMax(List<Car> cars) {
-    	if(cars == null) return 0;
+    	if(cars == null)
+			throw new IllegalArgumentException("empty list");
     	List<Integer> l = new LinkedList<>();
     	for(Car c: cars) {
-    		if(c != null) l.add(this.timePerWorkstationMap.get(c.getCarModelName()));
+    		if(c != null) l.add(this.timePerWorkstationMap.get(c.getCarModel().getClass()));
     	}
     	if (l.isEmpty()) return 0;
     	return Collections.max(l);
@@ -146,24 +224,25 @@ public class Scheduler {
 
     /**
      * Add time in minutes to this.minutes
-     *
      * @param minutes Minutes to add to this.minutes
      */
     public void addTime(int minutes) {
+		if (minutes<0)
+			throw new IllegalArgumentException("time can't be negative");
         this.minutes = this.getMinutes() + minutes;
     }
     
     /**
-     * Get amount of minutes that have already passed in the day
-     * @return this.minutes
+     * Get amount of minutes that has already passed in the day
+     * @return the current passed minutes in the day
      */
     public int getMinutes() {
         return this.minutes;
     }
 
 	/**
-	 * Get amount of days that have already passed
-	 * @return this.day
+	 * Get the amount of days that have already passed
+	 * @return the current day
 	 */
     public int getDay() {
         return this.day;
@@ -171,26 +250,32 @@ public class Scheduler {
 
 	/**
 	 * Get the current time in a string format
-	 * @return string of current time
+	 * @return {@code TimeStamp} of current time
 	 */
 	public TimeStamp getTime() {
 		return new TimeStamp(this.getDay(), this.getMinutes());
 	}
 
     /**
-     * advances day by 1 and calculates the length of next day
+     * Advances the day based on the overtime
      */
     public void advanceDay() {
         this.day += 1;  // Go to next day
-        int overTime = this.getMinutes() - this.workingDayMinutes; // Calculate the amount of overtime this day
-        this.workingDayMinutes = 960 - overTime;    // Calculate how long the shifts of next day will be
+        overTime += (this.getMinutes() - this.workingDayMinutes); // Calculate the amount of overtime this day
+        
+        while(overTime > 960) { //overtime more than a day
+        	this.day += 1;
+        	overTime -= 960;
+        }
+        if (overTime > 0){ //overtime less than a day and positive
+        	this.workingDayMinutes = 960 - overTime;
+        	overTime = 0;
+        }
+        else { //negative overtime
+        	overTime = 0; 
+        	this.workingDayMinutes = 960;
+        }
         this.minutes = 0; // Reset amount of minutes that have past this day
-		try {
-			this.controller.advanceAssembly();
-		}
-		catch (NotAllTasksCompleteException e) {
-			//TODO do something (this was just a quick fix)
-			}
     }
 
 	/**
@@ -199,13 +284,29 @@ public class Scheduler {
 	 * @return whether there is enough time in the day to add a car to the assembly line
 	 */
 	public boolean canAddCarToAssemblyLine(int minutes) {
+		if (minutes<0)
+			throw new IllegalArgumentException("no negative minutes");
+		int estTime;
 		Car nextCar = this.getNextScheduledCar();
 		List<Car> workstationCars = getWorkStationCars();
 		Car car1 = workstationCars.get(0);
 		Car car2 = workstationCars.get(1);
-		int estTime = this.getMax(Arrays.asList(nextCar, car1, car2))
-				+ this.getMax(Arrays.asList(nextCar, car1));
-		if(nextCar != null) estTime += this.getMax(List.of(nextCar));
+		if(nextCar == null) {
+			estTime = Collections.min(this.timePerWorkstationMap.values());
+			if(car1 != null || car2 != null)
+				estTime += this.getMax(Arrays.asList(car2, car1));
+			else
+				estTime += Collections.min(this.timePerWorkstationMap.values());
+			if(car1 != null)
+				estTime += this.getMax(List.of(car1));
+			else
+				estTime += Collections.min(this.timePerWorkstationMap.values());
+		}
+		else {
+			estTime = this.getMax(Arrays.asList(nextCar, car1, car2))
+					+ this.getMax(Arrays.asList(nextCar, car1)) 
+					+ this.getMax(List.of(nextCar));
+		}
         return this.minutes + minutes <= this.workingDayMinutes - estTime;
     }
 
@@ -214,18 +315,13 @@ public class Scheduler {
 	 * @return list of cars at workstations
 	 */
 	private List<Car> getWorkStationCars() {
-		ListIterator<WorkStation> workstations = this.controller.getAssembly().getWorkStations().listIterator();
-		ArrayList<Car> workstationCars = new ArrayList<>();
-		while (workstations.hasNext()){
-			// check if throws nullpointerexception
-			workstationCars.add(workstations.next().getCar());
-		}
-		return workstationCars;
+		List<WorkStation> workstations = this.controller.getAssembly().getWorkStations();
+		return new ArrayList<>(workstations.stream().map(WorkStation::getCar).toList());
 	}
 
 	/**
      * Returns the current schedulingAlgorithm
-     * @return this.schedulingAlgorithm
+     * @return the current scheduling algorithm (Batch or fifo)
      */
 	public String getSchedulingAlgorithm() {
         return this.algorithm;
@@ -234,10 +330,12 @@ public class Scheduler {
     /**
      * set the current schedulingAlgorithm to the new given algorithms
      * @param algorithm selected priority algorithm
-	 * @param batchOptions a map of the selected batchoption
+	 * @param batchOptions a map of the selected batch option
      */
     public void setSchedulingAlgorithm(String algorithm, Map<String,String> batchOptions) {
-		if(!this.isValidSchedulingAlgorithm(algorithm)) throw new IllegalArgumentException("Invalid Scheduling Algorithm");
+    	if(!this.isValidSchedulingAlgorithm(algorithm)) throw new IllegalArgumentException("Invalid Scheduling Algorithm");
+		if (algorithm.equals("BATCH") && batchOptions == null)
+			throw new IllegalArgumentException("invalid batch options");
 		this.algorithm = algorithm;
 		if(algorithm.equals("BATCH")) this.batchOptions = batchOptions;
 		//update the est. completionTime from the car in the queue
@@ -250,7 +348,7 @@ public class Scheduler {
 	 * @return True if the given algorithm is valid
 	 */
 	private boolean isValidSchedulingAlgorithm(String algorithm) {
-		return this.getValidAlgorithms().contains(algorithm);
+		return algorithm != null && this.getValidAlgorithms().contains(algorithm);
 	}
 
 	/**
@@ -262,10 +360,10 @@ public class Scheduler {
 
     /**
      * Returns the car that is scheduled to be the next car on the assemblyLine
-     * @return this.carQueue.removeFirst()
+     * @return returns the first car on the carqueue
      */
     public Car getNextScheduledCar() {
-    	customIterator<Car> iter = this.iterator(this.controller.getCarQueue());
+    	QueueIterator<Car> iter = this.createIterator(this.controller.getCarQueue());
     	if (iter.hasNext())
         	return iter.next(this.algorithm);
     	return null;
@@ -276,8 +374,10 @@ public class Scheduler {
 	 * @param cars list of cars to loop over
 	 * @return new customIterator that loops over cars
 	 */
-	public customIterator<Car> iterator(List<Car> cars) {
-		return new customIterator<>() {
+	public QueueIterator<Car> createIterator(List<Car> cars) {
+		if (cars == null)
+			throw new IllegalArgumentException("List of cars cannot be null");
+		return new QueueIterator<>() {
 			final List<Car> list = new LinkedList<>(cars);
 
 			public boolean hasNext() {
@@ -294,7 +394,7 @@ public class Scheduler {
 									if(list.get(i).getPartsMap().get(prioSelection.getKey()).equals(prioSelection.getValue()))
 										return list.remove(i);
 					}
-				//if there is no more element that is conform with the batch, return to fifo
+				//if there is no more element that is conform with the batch, return to FiFo
 				return list.remove(0);
 			}
 		};
